--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Host Grotesk';
-  src: url('/HostGrotesk-Light.ttf') format('truetype');
+  src: url('HostGrotesk-Regular.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -181,12 +181,6 @@
     p {
       font-size: var(--text-base);
       font-weight: var(--font-weight-normal);
-      line-height: 1.5;
-    }
-
-    label {
-      font-size: var(--text-base);
-      font-weight: var(--font-weight-medium);
       line-height: 1.5;
     }
 
