header font change'

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,8 +12,8 @@
 
 
 @font-face {
-  font-family: 'Financier';
-  src: url('Sprat-Regular.woff2') format('woff2');
+  font-family: 'Headline';
+  src: url('Teodor-TRIAL-Medium.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
