--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@
 
 @font-face {
   font-family: 'Headline';
-  src: url('Teodor-TRIAL-Medium.woff2') format('woff2');
+  src: url('Williwaw-Book.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
